# wpc-ai-code-livekit-based-telephone-call

./: .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  LINUX_OS.md  README.md  RENDER.md  docker-compose.yml  index.html  package-lock.json  package.json  render.yaml
backend/: agent_worker.py  main.py  pyproject.toml  requirements.txt  start.sh
src/: App.css  App.tsx  index.css
