[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "av==17.0.1",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "colorama==0.4.6",
    "distro==1.9.0",
    "docstring-parser==0.18.0",
    "eval-type-backport==0.3.1",
    "fastapi==0.136.1",
    "frozenlist==1.8.0",
    "googleapis-common-protos==1.74.0",
    "grpcio==1.80.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.13",
    "importlib-metadata==8.7.1",
    "jiter==0.14.0",
    "livekit==1.1.7",
    "livekit-agents==1.5.7",
    "livekit-api==1.1.0",
    "livekit-blingfire==1.1.0",
    "livekit-plugins-deepgram==1.5.7",
    "livekit-plugins-elevenlabs==1.5.7",
    "livekit-plugins-openai==1.5.7",
    "livekit-protocol==1.1.7",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "multidict==6.7.1",
    "nest-asyncio==1.6.0",
    "numpy==2.4.4",
    "openai==2.33.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "pillow==12.2.0",
    "prometheus-client==0.25.0",
    "propcache==0.4.1",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "pycparser==3.0",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pygments==2.20.0",
    "pyjwt==2.12.1",
    "pypdf==6.10.2",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "requests==2.33.1",
    "rich==15.0.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sounddevice==0.5.5",
    "starlette==1.0.0",
    "tqdm==4.67.3",
    "typer==0.25.1",
    "types-protobuf==7.34.1.20260408",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.46.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "yarl==1.23.0",
    "zipp==3.23.1",
]
